2008-04-07  Chong Yidong  <cyd@stupidchicken.com>

	* intro.texi (Some Terms): Change "fonts in this manual" index
	entry to "typographic conventions".

2008-04-05  Eli Zaretskii  <eliz@gnu.org>

	* objects.texi (Text Props and Strings): Add indexing for read
	syntax of text properties.

2008-03-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* processes.texi (Decoding Output): Remove process-filter-multibyte
	functions.

2008-03-15  Martin Rudalics  <rudalics@gmx.at>

	* display.texi (Finding Overlays): Say that empty overlays at
	the end of the buffer are reported too.

2008-03-13  Glenn Morris  <rgm@gnu.org>

	* elisp.texi (EMACSVER): Set to 23.0.60.

2008-02-26  Chong Yidong  <cyd@stupidchicken.com>

	* strings.texi (Formatting Strings): Treat - and 0 as flag
	characters.

2008-02-22  Glenn Morris  <rgm@gnu.org>

	* frames.texi (Position Parameters): Clarify the description of
	`left' and `top', using information from "Geometry".
	(Geometry): Give a pointer to "Position Parameters", rather than
	repeating information.

2008-02-11  Glenn Morris  <rgm@gnu.org>

	* objects.texi (Equality Predicates): No longer talk about "two"
	functions.

2008-02-11  Lawrence Mitchell <wence@gmx.li>  (tiny change)

	* objects.texi (Equality Predicates): Add defun for
	equal-including-properties.

2008-02-10  Glenn Morris  <rgm@gnu.org>

	* objects.texi (Equality Predicates):
	Mention equal-including-properties.

2008-02-07  Richard Stallman  <rms@gnu.org>

	* windows.texi (Window Start): Mention the feature of moving
	window-start to start of line.

2008-02-07  Jan Djärv  <jan.h.d@swipnet.se>

	* keymaps.texi (Tool Bar): Document rtl property.

2008-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* display.texi (Button Types):
	For define-button-type, clarify type of NAME.

2008-01-19  Martin Rudalics  <rudalics@gmx.at>

	* buffers.texi (Buffer Modification): Fix typo.

2008-01-06  Dan Nicolaescu  <dann@ics.uci.edu>
