@@ -1,5 +1,11 @@
 2008-04-19  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* minibuffer.el (completion-table-with-context): Add support for `pred'.
+	(completion-table-with-terminator): Don't use complete-with-action
+	since we have to distinguish all three cases anyway.
+	(completion-table-with-predicate): New function.
+	(dynamic-completion-table): Add obsolete alias.
+
 	* emacs-lisp/trace.el (trace-make-advice): Don't change selected-window.
 
 2008-04-18  Sam Steingold  <sds@gnu.org>
@@ -13,11 +19,9 @@
 
 2008-04-18  Andreas Schwab  <schwab@suse.de>
 
-	* Makefile.in ($(MH_E_DIR)/mh-loaddefs.el): Depend on
-	$(lisp)/subdirs.el.
-	($(CAL_DIR)/cal-loaddefs.el): Likewise.
-	($(CAL_DIR)/diary-loaddefs.el): Likewise.
-	($(CAL_DIR)/hol-loaddefs.el): Likewise.
+	* Makefile.in ($(MH_E_DIR)/mh-loaddefs.el, $(CAL_DIR)/cal-loaddefs.el)
+	($(CAL_DIR)/diary-loaddefs.el, $(CAL_DIR)/hol-loaddefs.el):
+	Depend on $(lisp)/subdirs.el.
 
 2008-04-18  Juanma Barranquero  <lekktu@gmail.com>
 
